--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -24,7 +24,7 @@
             android:textColorHint="@android:color/white"
             android:textSize="34sp"
             android:text="9971293788"
-            android:inputType="phone"
+            android:inputType="text"
             app:met_baseColor="@android:color/white"
             app:met_maxCharacters="11"
             app:met_primaryColor="@android:color/white"
