--- a/app/src/main/res/layout/activity_order_status.xml
+++ b/app/src/main/res/layout/activity_order_status.xml
@@ -15,5 +15,10 @@
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
 
-        ></android.support.v7.widget.RecyclerView>
+        >
+
+
+
+
+    </android.support.v7.widget.RecyclerView>
 </RelativeLayout>
