--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -46,7 +46,9 @@
         android:textSize="24sp"/>
 
 </LinearLayout>
-            <Button
+
+
+            <info.hoang8f.widget.FButton
                 android:text="Place Order"
                 android:textColor="@android:color/white"
                 android:layout_width="match_parent"
@@ -56,7 +58,7 @@
                 android:layout_margin="8dp"
                 app:shadowHeight="5dp"
 
-                app:buttonColor="@color/btnSignActive"
+                app:fButtonColor="@color/btnSignActive"
                 app:shadowColor="@android:color/black"
                 app:cornerRadius="4dp"
                 app:shadowEnabled="true"
