--- a/app/src/main/res/layout/activity_food_list.xml
+++ b/app/src/main/res/layout/activity_food_list.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/swipe_layout"
     android:background="@drawable/background"
     tools:context=".FoodList">
 
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <com.mancj.materialsearchbar.MaterialSearchBar
         android:layout_width="match_parent"
@@ -25,4 +28,6 @@
         android:layout_height="match_parent"
         android:layout_below="@id/searchBar"
         android:scrollbars="vertical" />
+
 </RelativeLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
