--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,8 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="@drawable/background"
-    tools:openDrawer="start">
+    tools:openDrawer="start"
+  app:background="@drawable/background">
+
 
     <include
         layout="@layout/app_bar_home"
