--- a/app/src/main/res/layout/cart_layout.xml
+++ b/app/src/main/res/layout/cart_layout.xml
@@ -14,15 +14,26 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="center_vertical"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp">
 
-<LinearLayout
+
+        android:layout_margin="8dp">
+
+        <ImageView
+            android:id="@+id/cart_image"
+            android:layout_width="70dp"
+            android:layout_height="70dp" />
+
+
+
+        <LinearLayout
+
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_weight="9"
     android:orientation="vertical"
     >
+
+
     <TextView
         android:id="@+id/cart_item_name"
         android:gravity="center_vertical|start"
@@ -46,13 +57,15 @@
 
 </LinearLayout>
 
-        
-<ImageView
-    android:layout_width="20dp"
-    android:layout_height="20dp"
-    android:id="@+id/cart_item_count"
-    android:layout_marginRight="16dp"
-    android:layout_gravity="center_vertical|end"/>
+        <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
+            android:id="@+id/btn_quantity"
+            android:layout_width="60dp"
+            android:layout_height="30dp"
+            android:layout_margin="10dp"
+            app:backGroundColor="@color/colorAccent"
+            app:finalNumber="20"
+            app:initialNumber="1"
+            app:textSize="8sp" />
     </LinearLayout>
 
 
