--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -1,34 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
+
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp"
+    android:background="@drawable/background"
+    app:cardCornerRadius="0dp"
     app:cardElevation="4dp">
 
-<RelativeLayout
+<LinearLayout
         android:layout_width="match_parent"
+    android:layout_margin="10dp"
+      android:orientation="vertical"
+    android:weightSum="5"
+
         android:layout_height="match_parent">
 
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:src="@drawable/background"
             android:scaleType="centerCrop"
+            android:layout_weight="4"
             android:id="@+id/food_image"/>
 
 
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#4f0e0d0e"
-            android:text="Name of food"
-            android:textColor="@android:color/white"
-            android:textSize="20sp"
-            android:gravity="center"
-            android:layout_alignParentBottom="true"
-            android:id="@+id/food_name"/>
-    </RelativeLayout>
+            android:layout_height="0dp"
+            android:gravity="center_vertical"
+            android:layout_weight="1"
+            android:weightSum="10"
+
+            android:orientation="horizontal"
+            >
+
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="8"
+                android:layout_height="wrap_content"
+
+                android:text="Name of food"
+
+                android:textSize="20sp"
+
+
+                android:id="@+id/food_name"
+                />
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:tint="@color/colorAccent"
+                android:id="@+id/btnShare"
+                android:src="@drawable/ic_security_black_24dp"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:id="@+id/fav"
+                android:src="@drawable/ic_favorite_border_black_24dp"
+                android:tint="@color/colorAccent"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_margin="10dp"
+
+        android:layout_height="wrap_content"
+
+        android:text="$100"
+
+        android:textSize="20sp"
+        android:id="@+id/food_price"
+        />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_centerVertical="true"
+        android:tint="@color/colorAccent"
+        android:id="@+id/btnquickCart"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="30dp"
+        android:src="@drawable/ic_shopping_cart_black_24dp"
+        android:layout_height="wrap_content" />
+
+</RelativeLayout>
+    </LinearLayout>
+
 </android.support.v7.widget.CardView>
+
+
+
+
+
+
