--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -2,7 +2,11 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    app:cardCornerRadius="0dp"
+    android:layout_margin="10dp"
+    app:cardMaxElevation="10dp"
+
+    android:layout_height="wrap_content"
 
     app:cardElevation="4dp">
 
@@ -28,7 +32,7 @@
             android:textSize="20sp"
             android:textColor="@android:color/white"
             android:gravity="center"
-            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
             android:id="@+id/menu_name"/>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
